adds some styles

--- a/src/public/less/style.less
+++ b/src/public/less/style.less
@@ -1,6 +1,28 @@
 body {
-  background-color: grey;
-  p {
-    font-size: 60px;
+  background-color: #e3e3e3;
+  max-width: 1200px;
+  .page-wrap {
+    width: 100%;
+    margin: 0 auto;
   }
+}
+
+/* Extra Small Devices, Phones */
+@media(min-width: 480px) {
+
+}
+
+/* Small Devices, Tablets */
+@media(min-width: 768px) {
+
+}
+
+/* Medium Devices, Desktops */
+@media(min-width: 992px) {
+
+}
+
+/* Large Devices, Wide Screens */
+@media(min-width: 1200px) {
+
 }
