--- a/src/public/css/style.css
+++ b/src/public/css/style.css
@@ -1,6 +1,12 @@
 body {
-  background-color: grey;
+  background-color: #e3e3e3;
+  max-width: 1200px;
 }
-body p {
-  font-size: 60px;
+body .page-wrap {
+  width: 100%;
+  margin: 0 auto;
 }
+/* Extra Small Devices, Phones */
+/* Small Devices, Tablets */
+/* Medium Devices, Desktops */
+/* Large Devices, Wide Screens */
